[package]
name = "rpgmvmz-decrypter"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
futures = "0.3.31"
hex = "0.4.3"
phf = { version = "0.11.3", features = ["macros"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "fs"] }
walkdir = "2.5.0"

[profile.release]
strip = "symbols"
panic = "abort"
