[package]
name = "rpgmvmz-decrypter"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
hex = "0.4.3"
phf = { version = "0.11.3", features = ["macros"] }
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
walkdir = "2.5.0"

[profile.release]
strip = "symbols"
panic = "abort"
