[package]
name = "rpgmvmz-decrypter-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "decvz"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
phf = { version = "0.11.3", features = ["macros"] }
rayon = "1.10.0"
serde_json = "1.0.140"
walkdir = "2.5.0"
rpgmvmz-decrypter = { path = "../lib", version = "0.1.0" }
